src/test/resources/semantic/sentences/error/TC_ERROR_OPERATION1.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 9 | COLUMNA 23 | Operacion % no soportada para operandos de tipo Bool |

start{
    Bool bool1;
    Bool bool2;
    Bool operation;
    operation = bool1 % bool2;
}
